--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,3 +37,32 @@ jobs:
       - name: Run Tests
         id: test
         run: CI=true npm test
+
+  deploy:
+    name: build && push image to docker hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TOKEN }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app-dev
+                  
+      - name: build and push api
+        id: build-push-api
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app-dev:latest
+          labels:  ${{ steps.meta.outputs.labels }}
