--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -49,7 +49,10 @@ jobs:
         uses: docker/setup-buildx-action@v2
       
       - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TOKEN }}
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
