--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     timeout-minutes: 10 
 
     services:
@@ -39,13 +38,15 @@ jobs:
         run: CI=true npm test
 
   deploy:
-    name: build && push image to docker hub
+    name: Build && Push Image to Docker Hub
     runs-on: ubuntu-latest
+    needs: test
+    if: ${{ needs.test.result == 'success' }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
       
-      - name: setup docker buildx
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
       
       - name: Login to Docker Hub
@@ -55,8 +56,7 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Set Release Version
-        run: |
-          echo "BUILD_VERSION=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
+        run: echo "BUILD_VERSION=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -64,7 +64,7 @@ jobs:
         with:
           images: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app
                   
-      - name: build and push api
+      - name: Build and Push API
         id: build-push-api
         uses: docker/build-push-action@v3
         with:
@@ -72,4 +72,4 @@ jobs:
           file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels:  ${{ steps.meta.outputs.labels }}
+          labels: ${{ steps.meta.outputs.labels }}
