--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,6 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }},
            ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:latest
           labels: ${{ steps.meta.outputs.labels }}
