--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,5 +60,16 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app
+                    
+      - name: Build and Push API
+        id: build-push-api
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }},
+             ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:latest
+          labels: ${{ steps.meta.outputs.labels }}
                   
 
