--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,38 +42,41 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: ${{ needs.test.result == 'success' }}
+    env:
+      NODE_ENV: production 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      
+            
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
-      
+          
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_TOKEN }}
+        
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app
-         
+            images: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app
+               
       - name: Debug Tags
-        run: echo  ${{ steps.meta.outputs.tags }}
-
+        run: echo ${{ steps.meta.outputs.tags }}
+        
       - name: Build and Push API
         id: build-push-api
         uses: docker/build-push-action@v3
         with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: |
-            ${{ steps.meta.outputs.tags }}
-            ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:latest
-          labels: ${{ steps.meta.outputs.labels }}
+              context: .
+              file: Dockerfile
+              push: true
+              tags: |
+                ${{ steps.meta.outputs.tags }}
+                 ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:latest
+              labels: ${{ steps.meta.outputs.labels }}
+        
                   
 
