--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
 
   app:
     container_name: my-techdemo-app
-    image: elliw01/my-techdemo-app:latest
+    image: my-techdemo-app:latest
     ports:
       - 13000:3000
     environment:
-      - NODE_ENV: development 
+      - NODE_ENV=development 
 
   watchtower:
     container_name: watchtower
