--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10 
 
+    # provide infrastructue - setup a docker container for the tests
     services:
       postgres:
         image: postgres:latest
@@ -40,6 +41,7 @@ jobs:
   deploy:
     name: Build && Push Image to Docker Hub
     runs-on: ubuntu-latest
+    # Only executed if tests succeed
     needs: test
     if: ${{ needs.test.result == 'success' }}
     env:
@@ -47,7 +49,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-            
+      
+      # Docker Buildx Plugin
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
           
@@ -56,7 +59,8 @@ jobs:
         with:
               username: ${{ secrets.DOCKER_USERNAME }}
               password: ${{ secrets.DOCKER_TOKEN }}
-        
+
+      # Get metadata for docker image
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
